bug fix, small improvements Improve map click behavior fix landing page merge image covering navbar remove first-time redirect landing page landing page navbar mappedout links to map

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -239,6 +239,7 @@ a {
     background-color: #000000;
     color: #eee;
     position:fixed;
+    z-index: 1000;
   }
 
   nav:hover{
